package IM.Message;
import "IM.BaseDefine.proto";

message IMMsgData{
	required uint32 from_user_id = 1;
	required uint32 to_session_id = 2;
	required uint32 msg_id = 3;
	required uint32 create_time = 4;
	required IM.BaseDefine.MsgType msg_type = 5;
	required bytes 	msg_data = 6;
}

message IMMsgDataAck{
	required uint32 user_id = 1;
	required uint32 session_id = 2;
	required uint32 msg_id = 3;
	required IM.BaseDefine.SessionType session_type = 4;
}
